fixed favoriteColor
