# swagger.json
@@ -28,6 +28,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -49,7 +52,7 @@
                 "email": {
                   "example": "any"
                 },
-                "favColor": {
+                "favoriteColor": {
                   "example": "any"
                 },
                 "birthday": {
@@ -86,6 +89,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -113,7 +119,7 @@
                 "email": {
                   "example": "any"
                 },
-                "favColor": {
+                "favoriteColor": {
                   "example": "any"
                 },
                 "birthday": {
